Closed
Bug 1168055
Opened 11 years ago
Closed 11 years ago
Active Pseudo class not working for textbox in firefox 38
Categories
(Core :: Layout: Form Controls, defect)
Tracking
()
RESOLVED
FIXED
mozilla41
People
(Reporter: emailron1992, Assigned: ehsan.akhgari)
References
Details
(4 keywords)
Attachments
(2 files)
|
586 bytes,
text/html
|
Details | |
|
3.08 KB,
patch
|
smaug
:
review+
Sylvestre
:
approval-mozilla-aurora+
Sylvestre
:
approval-mozilla-beta+
|
Details | Diff | Splinter Review |
User Agent: Mozilla/5.0 (Windows NT 6.1; WOW64; rv:38.0) Gecko/20100101 Firefox/38.0
Build ID: 20150513174244
Steps to reproduce:
i created an HTML page having textbox control (input box) and i applied three classes . below is the code
body {
background: lightblue;
}
.txtLogin {
width: 200px;
padding: 1px !important;
border: 1px solid #ccc;
height: 20px;
font-size: 12px;
font-weight: normal;
color: #000;
font-family: Arial;
}
.txtLogin:hover {
background: #ededed;
border: 1px solid #bfbfbf;
border-top: 1px solid #b5b5b5;
}
.txtLogin:active {
background: #d9d9d9;
border: 1px solid #bfbfbf !important;
}
code for textbox in .html
<input type="textarea" class="txtLogin">
Actual results:
on clicking on text box , active pseudo class must have been applied but it isnt
Expected results:
active class should have been applied
| Reporter | ||
Comment 2•11 years ago
|
||
Thanks for creating the Text case. issue is being reproduced on the same
Updated•11 years ago
|
Keywords: regressionwindow-wanted
Comment 3•11 years ago
|
||
Pushlog:
https://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=369a8f14ccf8&tochange=debc66b7bfe7
Regressed by: Bug 924087
Blocks: 924087
Keywords: regressionwindow-wanted → regression
Updated•11 years ago
|
Flags: needinfo?(ehsan)
Comment 4•11 years ago
|
||
We should either condition that check on the content not being anonymous, or skip up to the non-anonymous parent when anonymous content IsEditable() and repeat the check there...
Status: UNCONFIRMED → NEW
Ever confirmed: true
Comment 5•11 years ago
|
||
[Tracking Requested - why for this release]: Web compat regression.
Adding a tracking flag on Firefox40 and Firefox41. As we don't have a patch ready yet, leaving FF39 tracking unchanged. To be decided later.
| Assignee | ||
Updated•11 years ago
|
Assignee: nobody → ehsan
Flags: needinfo?(ehsan)
| Assignee | ||
Comment 7•11 years ago
|
||
Attachment #8610986 -
Flags: review?(bugs)
Updated•11 years ago
|
Attachment #8610986 -
Flags: review?(bugs) → review+
| Assignee | ||
Comment 9•11 years ago
|
||
Comment on attachment 8610986 [details] [diff] [review]
Fix the :active pseudo-class on text controls
Approval Request Comment
[Feature/regressing bug #]: Bug 924087
[User impact if declined]: See comment 0.
[Describe test coverage new/current, TreeHerder]: Locally, also has an automated test.
[Risks and why]: This is very low risk.
[String/UUID change made/needed]: None.
Attachment #8610986 -
Flags: approval-mozilla-beta?
Attachment #8610986 -
Flags: approval-mozilla-aurora?
Status: NEW → RESOLVED
Closed: 11 years ago
status-firefox41:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla41
Comment 11•11 years ago
|
||
Comment on attachment 8610986 [details] [diff] [review]
Fix the :active pseudo-class on text controls
Has test, should be safe, taking it for aurora & beta.
Attachment #8610986 -
Flags: approval-mozilla-beta?
Attachment #8610986 -
Flags: approval-mozilla-beta+
Attachment #8610986 -
Flags: approval-mozilla-aurora?
Attachment #8610986 -
Flags: approval-mozilla-aurora+
Comment 12•11 years ago
|
||
status-firefox40:
--- → fixed
Flags: in-testsuite+
Comment 13•11 years ago
|
||
status-firefox39:
--- → fixed
Updated•10 years ago
|
Comment 14•10 years ago
|
||
Added tracking for 39+
Updated•10 years ago
|
Keywords: dev-doc-needed,
site-compat
Comment 15•10 years ago
|
||
Posted the site compatibility doc for reference: https://www.fxsitecompat.com/en-US/docs/2015/active-pseudo-class-is-not-working-on-textbox/
Keywords: dev-doc-needed → dev-doc-complete
You need to log in
before you can comment on or make changes to this bug.
Description
•