Bug 1168055 - Fix the :active pseudo-class on text controls. r=smaug, a=sledru